# smart_time_test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
.github/workflows/: ci.yml
smart_time_test/: data.json  manage.py
smart_time_test/api/: admin.py  models.py  request_models.py  serializers.py  tests.py  urls.py  views.py
smart_time_test/api/migrations/: 0001_initial.py  0002_room_exam.py  0003_examregistration.py  0004_subject_rename_rum_number_room_room_number_and_more.py  0005_exam_alter_examregistration_exam.py  0006_alter_user_email.py  0007_alter_exam_room_id_and_more.py  0008_alter_exam_room_id.py
smart_time_test/api/tests/: test_exam_registrations.py  test_exam_unregistrations.py  test_exams.py  test_register.py  test_user_exam_registrations.py
smart_time_test/smart_time_test/: asgi.py  settings.py  wsgi.py
task_2/: manage.py
task_2/exam_organization/: admin.py  apps.py  models.py
task_2/exam_organization/migrations/: 0001_initial.py  0002_alter_campus_table_alter_subject_table_and_more.py  0003_teacher_subjectunit_exam.py  0004_group_room_exam_date_time_exam_format_and_more.py
task_2/task_2/: asgi.py  settings.py  wsgi.py
